--- a/vals/values-crdconversion.yaml
+++ b/vals/values-crdconversion.yaml
@@ -1,8 +1,9 @@
 crdconversion:
+  imageCredentials:
+    - name: far-secret
   image:
     repository: repo.f5.com/images
   rabbitmqNamespace: cnf-gateway
-  
   fluentbit_sidecar:
     enabled: false
     name: fluentbit
