--- a/vals/values-crdconversion.yaml
+++ b/vals/values-crdconversion.yaml
@@ -1,6 +1,6 @@
 crdconversion:
   imageCredentials:
-    - name: far-secret
+    name: far-secret
   image:
     repository: repo.f5.com/images
   rabbitmqNamespace: cnf-gateway
