--- a/vals/values-f5ingress.yaml
+++ b/vals/values-f5ingress.yaml
@@ -26,11 +26,11 @@ f5-tmm:
 
     resources:
       limits:
-        cpu: "1"
+        cpu: "500m"
         hugepages-2Mi: 2Gi
         memory: 2Gi
       requests:
-        cpu: "1"
+        cpu: "500m"
         hugepages-2Mi: 2Gi
         memory: 2Gi  
     customEnvVars:
