--- a/vals/values-cwc.yaml
+++ b/vals/values-cwc.yaml
@@ -6,7 +6,8 @@ cwc:
   image:
     repository: repo.f5.com/images
     pullPolicy: IfNotPresent
-
+  nodeSelector:
+    type: control-plane
   persistence:
     enabled: false
 orch:
