--- a/vals/values-f5ingress.yaml
+++ b/vals/values-f5ingress.yaml
@@ -26,7 +26,7 @@ f5-tmm:
 
     resources:
       limits:
-        cpu: "500m"
+        cpu: "1"
         hugepages-2Mi: 2Gi
         memory: 2Gi
       requests:
@@ -38,8 +38,8 @@ f5-tmm:
         value: 'debug'
       - name: TMM_MAPRES_ADDL_VETHS_ON_DP
         value: "TRUE"
-      - name: TMM_MAPRES_DELAY_MS
-        value: "10000"
+      # - name: TMM_MAPRES_DELAY_MS
+      #   value: "10000"
       - name: TMM_CALICO_ROUTER
         value: "default"
       - name: TMM_IGNORE_GATEWAYS
