--- a/vals/values-f5ingress.yaml
+++ b/vals/values-f5ingress.yaml
@@ -115,7 +115,7 @@ f5-tmm:
     rabbitmqNamespace: cnf-gateway
       
   f5-toda-logging:
-    enabled: false
+    enabled: true
     tmstats:
       enabled: true
       config:
