feat: added bgp to ingress

--- a/vals/values-f5ingress_bgp.yaml
+++ b/vals/values-f5ingress_bgp.yaml
@@ -81,7 +81,7 @@ f5-tmm:
 
     
     dynamicRouting:
-        enabled: false
+        enabled: true
         configMapName: "cnf-bgp"
         peerGroups: []
         exportZebosLogs: true
