feat: added resource values

--- a/vals/values-f5ingress_bgp.yaml
+++ b/vals/values-f5ingress_bgp.yaml
@@ -172,7 +172,7 @@ f5-tmm:
           cpu: 250m
           memory: 1Gi
         requests:
-          cpu: 250mm
+          cpu: 250m
           memory: 1Gi
 
 f5-stats_collector:
