--- a/vals/values-f5ingress.yaml
+++ b/vals/values-f5ingress.yaml
@@ -30,7 +30,7 @@ f5-tmm:
         hugepages-2Mi: 2Gi
         memory: 2Gi
       requests:
-        cpu: "500m"
+        cpu: "250m"
         hugepages-2Mi: 2Gi
         memory: 2Gi  
     customEnvVars:
@@ -80,20 +80,37 @@ f5-tmm:
        enabled: true
 
     
-    # dynamicRouting:
-    #     enabled: false
-    #     configMapName: "zebos"
-    #     peerGroups: []
-    #     exportZebosLogs: true
-    #     tmmRouting:
-    #       image:
-    #         repository: repo.f5.com/images
-    #         initName: f5dr-img-init
-    #         pullPolicy: IfNotPresent
-    #     tmrouted:
-    #       image:
-    #         repository: repo.f5.com/images
-    #         pullPolicy: IfNotPresent
+    dynamicRouting:
+        enabled: true
+        configMapName: "cnf-bgp"
+        peerGroups: []
+        exportZebosLogs: true
+        tmmRouting:
+          image:
+            repository: repo.f5.com/images
+            initName: f5dr-img-init
+            pullPolicy: IfNotPresent
+          resources:
+            limits:
+              cpu: 300m
+              memory: 512Mi
+            requests:
+              cpu: 150m
+              memory: 512Mi
+          config:
+            bgp:
+              asn: 65002
+        tmrouted:
+          image:
+            repository: repo.f5.com/images
+            pullPolicy: IfNotPresent
+          resources:
+            limits:
+              cpu: 300m
+              memory: 512Mi
+            requests:
+              cpu: 150m
+              memory: 512Mi
 
     service:
       type: ClusterIP
@@ -104,6 +121,13 @@ f5-tmm:
     image:
       repository: repo.f5.com/images
       pullPolicy: IfNotPresent
+    resources:
+      limits:
+        cpu: 250m
+        memory: 1Gi
+      requests:
+        cpu: 250m
+        memory: 1Gi
     enabled: true
     name: f5-blobd
 
@@ -112,6 +136,13 @@ f5-tmm:
     image:
       repository: repo.f5.com/images
       pullPolicy: IfNotPresent
+    resources:
+      limits:
+        cpu: 250m
+        memory: 1Gi
+      requests:
+        cpu: 250m
+        memory: 1Gi
     rabbitmqNamespace: cnf-gateway
       
   f5-toda-logging:
@@ -122,6 +153,13 @@ f5-tmm:
         image:
           repository: repo.f5.com/images
           pullPolicy: IfNotPresent
+      resources:
+          limits:
+            cpu: 250m
+            memory: 1Gi
+          requests:
+            cpu: 250m
+            memory: 1Gi
     fluentd:
       host: f5-toda-fluentd.cnf-gateway.svc.cluster.local
     sidecar:
@@ -129,6 +167,13 @@ f5-tmm:
       image:
         repository: repo.f5.com/images
         pullPolicy: IfNotPresent
+      resources:
+        limits:
+          cpu: 250m
+          memory: 1Gi
+        requests:
+          cpu: 250m
+          memory: 1Gi
 
 f5-stats_collector:
   enabled: true
@@ -196,7 +241,10 @@ f5-afm:
       image:
         repository: repo.f5.com/images
         pullPolicy: IfNotPresent
-
+      resources:
+        requests:
+          cpu: 200m
+          memory: 512Mi
 
     fluentbit_sidecar:
       debug: true
@@ -236,6 +284,13 @@ controller:
   tmm_pod_manager:
     image:
       repository: repo.f5.com/images
+    resources:
+      limits:
+        cpu: 250m
+        memory: 512Mi
+      requests:
+        cpu: 250m
+        memory: 512Mi
     nodeSelector:
       ## This label is used to deploy the pod on matching nodes
       type: control-plane
@@ -262,7 +317,13 @@ controller:
     image:
       repository: repo.f5.com/images
       pullPolicy: IfNotPresent
-
+    resources:
+      # limits: {}
+      #   cpu: 200m
+      #   memory: 256Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
     fluentd:
       host: f5-toda-fluentd.cnf-gateway.svc.cluster.local
 
