--- a/cr/cr-nat-pol.yaml
+++ b/cr/cr-nat-pol.yaml
@@ -7,7 +7,9 @@ spec:
   sourceTranslation:
     - name: st-v6v4
       addresses:
-        - "10.1.40.15-254"
+        - "10.1.40.0/24"
+      excludedAddresses:
+        - "10.1.40.1-10.1.40.20"
       clientConnectionLimit: 2000
       mapping:
         mode: endpoint-independent-mapping
