fix: enabled Zebos to advertise

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -4,8 +4,6 @@ router bgp 65002
   bgp log-neighbor-changes
   bgp graceful-restart restart-time 120
   no bgp default ipv4-unicast
-  redistribute kernel
-  redistribute connected
   !
   neighbor 10.1.30.9 remote-as 65003
   neighbor 10.1.30.9 ebgp-multihop 100
@@ -14,14 +12,16 @@ router bgp 65002
   !
   !
   address-family ipv6
-    redistribute kernel
-    redistribute connected
     neighbor 2403:5808:81:20::5 activate
     neighbor 2403:5808:81:20::5 soft-reconfiguration inbound
+    acceptsIPv4: false
+    acceptsIPv6: true
   exit-address-family
   !
   address-family ipv4
     neighbor 10.1.30.9 activate
     neighbor 10.1.30.9 soft-reconfiguration inbound
+    acceptsIPv4: true
+    acceptsIPv6: false
   exit-address-family
 !
