fix: disabled ignore gateway

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -4,6 +4,7 @@ router bgp 65002
   bgp log-neighbor-changes
   bgp graceful-restart restart-time 120
   no bgp default ipv4-unicast
+  redistribute kernel
   !
   neighbor 10.1.30.9 remote-as 65003
   neighbor 10.1.30.9 ebgp-multihop 100
@@ -14,14 +15,11 @@ router bgp 65002
   address-family ipv6
     neighbor 2403:5808:81:20::5 activate
     neighbor 2403:5808:81:20::5 soft-reconfiguration inbound
-    acceptsIPv4: false
-    acceptsIPv6: true
+    redistribute kernel
   exit-address-family
   !
   address-family ipv4
     neighbor 10.1.30.9 activate
     neighbor 10.1.30.9 soft-reconfiguration inbound
-    acceptsIPv4: true
-    acceptsIPv6: false
   exit-address-family
 !
