--- a/cr/cr-nat-pol.yaml
+++ b/cr/cr-nat-pol.yaml
@@ -7,6 +7,7 @@ spec:
   sourceTranslation:
     - name: st-v6v4
       routeAdvertisement: true
+      icmpEcho: true
       addresses:
         - "10.1.50.0/24"
       excludeAddresses:
