--- a/cr/cr-nat-pol.yaml
+++ b/cr/cr-nat-pol.yaml
@@ -20,4 +20,10 @@ spec:
   rule:
     - name: rl-nat-any
       ipProtocol: any
+      source:
+        addresses:
+          - "2403:5808:81:10::0/64"
+      destination:
+        addresses:
+         - "2403:5808:81:60::0/96"
       sourceTranslation: st-v6v4
