update: added cidrs for cluster and pod

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -14,6 +14,7 @@ router bgp 65002
   !
   address-family ipv6
     neighbor 2403:5808:81:20::5 activate
+    neighbor 2403:5808:81:20::5 default-originate
     neighbor 2403:5808:81:20::5 soft-reconfiguration inbound
     redistribute kernel
   exit-address-family
