--- a/cr/cr-static-route.yaml
+++ b/cr/cr-static-route.yaml
@@ -18,3 +18,23 @@ spec:
   prefixLen: 32
   type: gateway
   gateway: 10.1.30.1
+---
+apiVersion: k8s.f5net.com/v1
+kind: F5BigNetStaticroute
+metadata:
+  name: sr-cluster-cidr
+spec:
+  destination: 10.253.0.0
+  prefixLen: 16
+  type: gateway
+  interface: eth0
+---
+apiVersion: k8s.f5net.com/v1
+kind: F5BigNetStaticroute
+metadata:
+  name: sr-pod-cidr
+spec:
+  destination: 192.168.0.0
+  prefixLen: 16
+  type: gateway
+  interface: eth0
