--- a/cr/cr-static-route.yaml
+++ b/cr/cr-static-route.yaml
@@ -27,6 +27,7 @@ spec:
   destination: 10.253.0.0
   prefixLen: 16
   type: gateway
+  gateway: 169.254.1.1
   interface: eth0
 ---
 apiVersion: k8s.f5net.com/v1
@@ -37,4 +38,5 @@ spec:
   destination: 192.168.0.0
   prefixLen: 16
   type: gateway
+  gateway: 169.254.1.1
   interface: eth0
