--- a/cr/cr-dns-transparent-cache.yaml
+++ b/cr/cr-dns-transparent-cache.yaml
@@ -24,7 +24,8 @@ spec:
   dns:
     dnsCache: dnsc-transparent
     dns64Mode:  secondary
-    dns64Prefix:  2403:5808:81:60::0
+    dns64Prefix:  64:ff9b::
+    dns64AdditionalSectionRewrite: "v4-only"
   vlans:
     disableListedVlans: false
     vlanList:
