--- a/cr/cr-vip-nat64.yaml
+++ b/cr/cr-vip-nat64.yaml
@@ -5,7 +5,7 @@ metadata:
   name: vs-v6v4-any-01
 spec:
   #description: "v6 to v4 Generic VS"
-  ipv6destinationAddress: "2403:5808:81:60::0/96"
+  ipv6destinationAddress: "64:ff9b::0/96"
   destinationPort: 0
   ipProtocol: any
   #fastL4Settings:
