fix: change nodeselect dssm and rabbit

--- a/vals/values-rabbit.yaml
+++ b/vals/values-rabbit.yaml
@@ -1,7 +1,9 @@
 imageCredentials:
   name: far-secret
 replicaCount: 1
-
+nodeSelector:
+  ## This label is used to deploy the pod on matching nodes
+  type: control-plane
 image:
   repository: repo.f5.com/images
   pullPolicy: IfNotPresent
