--- a/vals/values-dssm.yaml
+++ b/vals/values-dssm.yaml
@@ -2,6 +2,9 @@ replicaCount: 2
 image:
   repository: repo.f5.com/images
   pullPolicy: IfNotPresent
+nodeSelector:
+    ## This label is used to deploy the pod on matching nodes
+    type: control-plane
       
 cert_client_sidecar:
   name: f5-cert-client
