--- a/vals/values-dssm.yaml
+++ b/vals/values-dssm.yaml
@@ -2,8 +2,6 @@ replicaCount: 2
 image:
   repository: repo.f5.com/images
   pullPolicy: IfNotPresent
-nodeSelector:
-   type: control-plane
       
 cert_client_sidecar:
   name: f5-cert-client
@@ -45,6 +43,14 @@ dssmUpgrader:
 serviceAccount:
   create: true
   name: sa-f5-cnf-cgnat-controller
+
+# nodeSelector:
+#    type: control-plane
+tolerations:
+  - key: "type"
+    operator: "Equal"
+    value: "control-plane"
+    effect: "NoSchedule"
 
 imagePullSecrets:
  - name: far-secret
