fix: dssm not starting correctly with nodeSelector

--- a/vals/values-dssm.yaml
+++ b/vals/values-dssm.yaml
@@ -49,7 +49,7 @@ serviceAccount:
 tolerations:
   - key: "type"
     operator: "Equal"
-    value: "control-plane"
+    value: "data-plane"
     effect: "NoSchedule"
 
 imagePullSecrets:
