fix: added more tmm memory.

--- a/vals/values-f5ingress.yaml
+++ b/vals/values-f5ingress.yaml
@@ -13,6 +13,10 @@ f5-tmm:
     topologyManager: "true"
 
     add_k8s_routes: true
+    
+    hugepages:
+      enabled: true
+
 
     image:
       repository: repo.f5.com/images
