update: updated ZebOS.conf included bfd and bgp debugs

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -9,6 +9,7 @@ router bgp 65002
   neighbor 10.1.30.9 remote-as 65003
   neighbor 10.1.30.9 ebgp-multihop 100
   neighbor 2403:5808:81:20::5 remote-as 65001
+  neighbor 2403:5808:81:20::5 fallover bfd
   neighbor 2403:5808:81:20::5 ebgp-multihop 100
   !
   !
@@ -24,3 +25,5 @@ router bgp 65002
     neighbor 10.1.30.9 soft-reconfiguration inbound
   exit-address-family
 !
+debug bgp all
+debug bfd all
