update: updated ZebOS.conf included bfd and bgp debugs

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -27,4 +27,4 @@ router bgp 65002
 !
 debug bgp all
 debug bfd all
-log file /var/log/f5/f5-tmm-routing_stdout.pipe
+log file /var/log/f5/f5-tmm-routing_%%HOSTNAME%%_stdout.pipe
