update: updated ZebOS.conf included bfd and bgp debugs

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -25,5 +25,6 @@ router bgp 65002
     neighbor 10.1.30.9 soft-reconfiguration inbound
   exit-address-family
 !
+no debug bgp all
 debug bfd all
 log file /var/log/f5/f5-tmm-routing_f5-tmm-cddc86d6b-nlz2c_stdout.pipe
