update: updated alias with new (tmm,zebos,logs)

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -26,5 +26,5 @@ router bgp 65002
   exit-address-family
 !
 no debug bgp all
-debug bfd all
+no debug bfd all
 log file /var/log/f5/f5-tmm-routing_f5-tmm-cddc86d6b-nlz2c_stdout.pipe
