update: updated bgp router-id (Test)

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -1,6 +1,6 @@
 router bgp 65002
   !
-  bgp router-id 10.1.1.7
+  bgp router-id %POD_IP%
   bgp log-neighbor-changes
   bgp graceful-restart restart-time 120
   no bgp default ipv4-unicast
