--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -1,10 +1,11 @@
 router bgp 65002
   !
-  bgp router-id %POD_IP%
+  bgp router-id 10.1.1.7
   bgp log-neighbor-changes
   bgp graceful-restart restart-time 120
   no bgp default ipv4-unicast
   redistribute kernel
+  redistribute static
   !
   neighbor 10.1.30.9 remote-as 65003
   neighbor 10.1.30.9 ebgp-multihop 100
