update: updated bgp routeid back to orginal

--- a/cr/ZebOS.conf
+++ b/cr/ZebOS.conf
@@ -1,13 +1,12 @@
 router bgp 65002
   !
-  bgp router-id %%POD_IP%%
+  bgp router-id 10.1.1.7
   bgp log-neighbor-changes
   bgp graceful-restart restart-time 120
   no bgp default ipv4-unicast
   redistribute kernel
   !
   neighbor 10.1.30.9 remote-as 65003
-  neighbor 10.1.30.9 description %%POD_IP%%
   neighbor 10.1.30.9 ebgp-multihop 100
   neighbor 2403:5808:81:20::5 remote-as 65001
   neighbor 2403:5808:81:20::5 fallover bfd
